--- a/Phase2/Makefile
+++ b/Phase2/Makefile
@@ -19,6 +19,14 @@ default: $(EXECS)
 exemple: exemple.o dsm.o 
 	$(CLINKER) $(OPTFLAGS) -o exemple exemple.o dsm.o  $(LIBS)
 
+dsmexec: dsmexec.o common.o
+	$(CLINKER) $(OPTFLAGS) -o dsmexec dsmexec.o  common.o $(LIBS)
+	mv dsmexec ./bin
+	
+dsmwrap: dsmwrap.o common.o
+	$(CLINKER) $(OPTFLAGS) -o dsmwrap dsmwrap.o  common.o $(LIBS)
+	mv dsmwrap ./bin
+
 clean:
 	@-/bin/rm -f *.o *~ PI* $(EXECS) *.out core  
 .c:
