lancement  du programme test par les fils
envoie du tableau de socket

--- a/Phase2/Makefile
+++ b/Phase2/Makefile
@@ -1,4 +1,4 @@
-ALL: default 
+ALL: default
 
 CC           = gcc
 CLINKER      = $(CC)
@@ -11,24 +11,28 @@ CFLAGS  =   -DREENTRANT
 CCFLAGS = $(CFLAGS)
 LIBS =  -lpthread
 
-EXECS = exemple
+EXECS = exemple common.o dsmexec dsmwrap test
 
 default: $(EXECS)
 
 
-exemple: exemple.o dsm.o 
+exemple: exemple.o dsm.o
 	$(CLINKER) $(OPTFLAGS) -o exemple exemple.o dsm.o  $(LIBS)
 
 dsmexec: dsmexec.o common.o
 	$(CLINKER) $(OPTFLAGS) -o dsmexec dsmexec.o  common.o $(LIBS)
 	mv dsmexec ./bin
-	
+
 dsmwrap: dsmwrap.o common.o
 	$(CLINKER) $(OPTFLAGS) -o dsmwrap dsmwrap.o  common.o $(LIBS)
 	mv dsmwrap ./bin
 
+test: test.o common.o 
+		$(CLINKER) $(OPTFLAGS) -o test test.o  dsm.o $(LIBS)
+		mv test ./bin
+
 clean:
-	@-/bin/rm -f *.o *~ PI* $(EXECS) *.out core  
+	@-/bin/rm -f *.o *~ PI* $(EXECS) *.out core
 .c:
 	$(CC) $(CFLAGS) -o $* $< $(LIBS)
 .c.o:
